k8s/analytics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: lux-gaming
  labels:
    app: analytics-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3004
    protocol: TCP
    name: http
  selector:
    app: analytics-service
